<resources>
    <string name="app_name">Makmur</string>
    <string name="signup">Daftar</string>
    <string name="login">Login</string>
    <string name="signin">Sign Up</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Complete your personal data</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Silakan isi data kamu untuk Login</string>
    <string name="title_login_page">Welcome to Left Lovers App</string>
    <string name="name">Username</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="getStarted">Get Started</string>
    <string name="noAcc">Daftar</string>
    <string name="upload">Upload</string>
    <string name="camera">Camera</string>
    <string name="galeri">Galeri</string>
    <string name="desc">Desc</string>
    <string name="home">Home</string>
    <string name="keranjang">Keranjang</string>
    <string name="profile">Profile</string>
    <string name="search_hint">Masukkan kata</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="NamaMakanan">Nama Makanan</string>
    <string name="expiredDate">Expired Date</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="NamaToko">Nama Toko</string>
    <string name="emailuser">Email User</string>
    <string name="Leaderboard">Leaderboard</string>
    <string name="history">History</string>
    <string name="username">username</string>
    <string name="point">point</string>

    <string name="purchase">Purchase</string>
    <string name="bayar">Sudah Bayar?</string>
    <string name="harga">harga</string>
    <string name="status">status</string>
    <string name="search">search</string>
    <string name="bayarAdmin">Silakan Transfer ke No. Rek 123456789 atas nama Admin Makmur</string>


</resources>