<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.LeftLoversApp.view.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_keranjang"
        android:name="com.example.LeftLoversApp.view.keranjang.KeranjangFragment"
        android:label="@string/keranjang"
        tools:layout="@layout/fragment_keranjang" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.LeftLoversApp.view.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />
</navigation>